[package]
name = "auth"
version = "0.0.1"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
chatgpt_rs = "1.1.3"
dotenv = "0.15.0"
config = "0.13.3"